--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -39,3 +39,6 @@
 - id: what-a-programmer-should-know-about-the-cpu
   bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
   bookAuthor: Takenobu Tani
+- id: molecular-cooking-in-japanese-cuisine
+  bookTitle: 分子調理の日本食
+  bookAuthor: 石川伸一 石川繭子 桑原明
