--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -76,3 +76,12 @@
     2021 年の本だが、この本の仮想のレシピ集は気合を入れれば日常的にできそうだなという感触を掴めた(恐らく記述時点でそれを狙ってたのであろうが)。
     しかしスノードームふろふき大根、これの茹で汁を捨てるんだ～と思い、煮汁の味を凝縮して提供できないのかと思ったわたしは、教科書的には NG だろうか。
     このような読者に対しては、まず実践してからモノを言えと。酔っ払ってないときにご飯を作って実践したいと思いますんません。
+- date: 2025-02-09
+  bookTitle: 分子調理の日本食
+  pages: 1 ~ 155
+  readCount: 2
+  notes: |
+    素面で読み返すべきかなと思って再度読んだ。
+    昨日煮汁を使ったらええんちゃうかと書いたけど、透明度の高いジェランガムを使ってスノードームを模したいので煮汁を使ったら濁るからイマイチな気がする。
+    濁ると吹雪いてる感じになりそう。白濁していいなら元々寒天でも使ってるだろうに。
+    ジェランガムはじめとして、他の添加物も器具も結構高くてお試しで買うにはかなりハードル高いな。そういう意味でも空想の料理なのかも。大豆レシチンは唯一手頃？
