--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -42,3 +42,6 @@
 - id: molecular-cooking-in-japanese-cuisine
   bookTitle: 分子調理の日本食
   bookAuthor: 石川伸一 石川繭子 桑原明
+- id: molecular-cooking-in-japanese-cuisine
+  bookTitle: 家庭の低温調理 完璧な食事のためのモダンなテクニックと肉、魚、野菜、デザートのレシピ 99
+  bookAuthor: Lisa Q. Fetterman, Meesha Halm, Scott Peabody, 水原 文
