--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -93,3 +93,10 @@
     Nomiku は潰れたけど他メーカーがポータブルな低温調理器具を販売し続けてるのも考えたらやっぱイノベータやったんやろな。
     卵の章まで読んだが、日本の場合は生卵を食すために尋常でない努力があるので安全に生卵を食べれるから、低温殺菌のところはピンときにくい。
     でも俄然興味が湧いてくる。低温調理器具ほしいな。
+- date: 2025-02-11
+  bookTitle: 家庭の低温調理 完璧な食事のためのモダンなテクニックと肉、魚、野菜、デザートのレシピ 99
+  pages: 46 ~ 121
+  notes: |
+    低温調理にも色々あって、そのもので一品を仕上げるのと、下ごしらえとして施してその後さっと焼き目をつけたりで＋αする方法がある。
+    いずれにも同じなのが高温で調理すると実現できない手軽な方法で失敗しないジューシーな食感が得られるところか。
+    マスのオイル煮とコンフィは俄然興味あるな。コンフィは Cooking for Geeks に油は熱を伝える以外に関係ないって書いてたし、あれは低温調理ならではの味わいなんやろう。
