--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -100,3 +100,11 @@
     低温調理にも色々あって、そのもので一品を仕上げるのと、下ごしらえとして施してその後さっと焼き目をつけたりで＋αする方法がある。
     いずれにも同じなのが高温で調理すると実現できない手軽な方法で失敗しないジューシーな食感が得られるところか。
     マスのオイル煮とコンフィは俄然興味あるな。コンフィは Cooking for Geeks に油は熱を伝える以外に関係ないって書いてたし、あれは低温調理ならではの味わいなんやろう。
+- date: 2025-02-12
+  bookTitle: 家庭の低温調理 完璧な食事のためのモダンなテクニックと肉、魚、野菜、デザートのレシピ 99
+  pages: 122 ~ 175
+  notes: |
+    豚の低温調理で気になるのは菌や寄生虫だが、こういうのは本では直接的に書いてないから低温調理器具の説明書で見るのが良いか。でも 57 ℃あたりが下限になってるし大丈夫そうか。
+    肉の調理がこれまででも最長時間ぽいな。実際こんなに調理に時間をかけた経験は発酵以外にない。
+    しかしキュアリングソルトが使いにくいからパストラミが作れないのは残念。
+    まだ低温調理器具買ってもないけど気持ちだけは高まってきた。
