--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -108,3 +108,11 @@
     肉の調理がこれまででも最長時間ぽいな。実際こんなに調理に時間をかけた経験は発酵以外にない。
     しかしキュアリングソルトが使いにくいからパストラミが作れないのは残念。
     まだ低温調理器具買ってもないけど気持ちだけは高まってきた。
+- date: 2025-02-13
+  bookTitle: 家庭の低温調理 完璧な食事のためのモダンなテクニックと肉、魚、野菜、デザートのレシピ 99
+  pages: 176 ~ 205
+  notes: |
+    野菜のセルロースを分解するためにほとんどのレシピで 85 ℃。
+    根菜の長時間調理だとボツリヌス菌とか大丈夫なんかなと思ったけど、長期保存しないメニューで調理時間もさほど長くないし 85 ℃で調理するから安心なんかな。
+    調べると、中心温度 80 ℃で 30 分間の加熱で毒素が失活するというのがあったし。
+    パースニップは流石に近所で手に入らんな。万能マッシュルームはめちゃうまそう。
