--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -116,3 +116,10 @@
     根菜の長時間調理だとボツリヌス菌とか大丈夫なんかなと思ったけど、長期保存しないメニューで調理時間もさほど長くないし 85 ℃で調理するから安心なんかな。
     調べると、中心温度 80 ℃で 30 分間の加熱で毒素が失活するというのがあったし。
     パースニップは流石に近所で手に入らんな。万能マッシュルームはめちゃうまそう。
+- date: 2025-02-14
+  bookTitle: 家庭の低温調理 完璧な食事のためのモダンなテクニックと肉、魚、野菜、デザートのレシピ 99
+  pages: 206 ~ 237
+  notes: |
+    卵を使ったデザートが多いのは、凝固点の 85 ℃に達さずに完璧に卵を調理するには低温調理が向いてるから。
+    また風味の抽出に向いてるからアイスクリームに最適と。ただし原液を作るまでが低温調理で以降はマシンなりを使う必要がある。
+    個人的には子どもに野菜ペーストを混ぜた団子が好評だったので、レンチンより低温調理の方がカボチャとかの野菜の風味が上がるなら、次作るときに応用できそうで興味あるな。
