--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -123,3 +123,12 @@
     卵を使ったデザートが多いのは、凝固点の 85 ℃に達さずに完璧に卵を調理するには低温調理が向いてるから。
     また風味の抽出に向いてるからアイスクリームに最適と。ただし原液を作るまでが低温調理で以降はマシンなりを使う必要がある。
     個人的には子どもに野菜ペーストを混ぜた団子が好評だったので、レンチンより低温調理の方がカボチャとかの野菜の風味が上がるなら、次作るときに応用できそうで興味あるな。
+- date: 2025-02-15
+  bookTitle: 家庭の低温調理 完璧な食事のためのモダンなテクニックと肉、魚、野菜、デザートのレシピ 99
+  pages: 238 ~ 263
+  notes: |
+    アルコールを蒸散させることなく適度な温度で砂糖を溶かし風味を抽出するには低温調理が向いていると(この本では 60 ℃)。
+    85 ℃以上の調理になるとガラス容器が急な加熱で割れることがあるので、あらかじめ容器を入れるなど徐々に加熱するよう注意が必要。
+    カクテルのことを全然知らないので調べたが、ビターズは蒸留酒に様々な材料を漬け込んで作成する苦みと香りが強いアルコール飲料のことで、カクテルに使われることが多いらしい。
+    そのビターズやシロップ等を作るのに低温調理が向いているということみたい。
+    甘い酒を好まないので 20 年くらいカクテルに触れてない気がするけど、ペニシリンはスコッチベースだしこれは試してもいいかも。
