--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -132,3 +132,12 @@
     カクテルのことを全然知らないので調べたが、ビターズは蒸留酒に様々な材料を漬け込んで作成する苦みと香りが強いアルコール飲料のことで、カクテルに使われることが多いらしい。
     そのビターズやシロップ等を作るのに低温調理が向いているということみたい。
     甘い酒を好まないので 20 年くらいカクテルに触れてない気がするけど、ペニシリンはスコッチベースだしこれは試してもいいかも。
+- date: 2025-02-16
+  bookTitle: 家庭の低温調理 完璧な食事のためのモダンなテクニックと肉、魚、野菜、デザートのレシピ 99
+  pages: 264 ~ 292
+  notes: |
+    わたしの場合ピクルスは発酵で作るので参考にしないが、コンフィは気になる。また常備菜のように比較的長く保存する場合は塩や発酵に頼らないと食中毒リスクが高まるから中々難しい。
+    最後に訳者注。 sous vide(スーヴィード)は真空という意味だが、真空調理より低温調理というのが主流になったのでそう訳したと。ただし「定」温調理の方がいいような気がしてると。
+    低温調理ならではの食中毒のリスクを意識しろってのはそうやわなと思った。
+    発酵ばかりしてると塩とか酸でリスク低減されるからうっかり忘れがちだが、低温調理の場合それらに頼れない場面もある(肉の調理のところで食感云々があったように)。
+    読み終えてみて低温調理は、食材の状態を狙った調理や風味の抽出・浸透に向いてる印象で、かつ温度は自動で管理するから失敗しにくいというのが魅力かと思った。あとは実践するのみかー。
