--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -141,3 +141,13 @@
     低温調理ならではの食中毒のリスクを意識しろってのはそうやわなと思った。
     発酵ばかりしてると塩とか酸でリスク低減されるからうっかり忘れがちだが、低温調理の場合それらに頼れない場面もある(肉の調理のところで食感云々があったように)。
     読み終えてみて低温調理は、食材の状態を狙った調理や風味の抽出・浸透に向いてる印象で、かつ温度は自動で管理するから失敗しにくいというのが魅力かと思った。あとは実践するのみかー。
+- date: 2025-02-17
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 122 ~ 127
+  notes: |
+    第 8 章 システムコール、例外、割り込み。
+    システムコールは、デバイスへのアクセス要求・メモリ割り当て等で利用される。専用の命令で発生しレベル変更と命令流切替を行う。戻るためにも専用の命令を実行する。
+    システムコールの特権レベル(privileded level, 例外レベル exception level とも)には最も制限された user level と広いアクセスが許可された supervisor level(kernel level/OS level とも)、仮想化を支援する hypervisor level 等がある。
+    例外は、ゼロ除算やアクセス違反など命令を続行できないケースをハードウェアが検知して発生する。これにより異常が生じてもシステムを健全に保てるようにする。
+    割り込みは CPU 外部からの要求をまとめる割り込みコントローラが割り込み要求をして CPU にとって非同期に発生する。
+    教科書的に覚えるゾーン。
