--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -187,3 +187,18 @@
     集中 UMA(Uniform Memory Access)と SMP(Symmetric Multiprocessing)はメモリアクセス時間が一定で、分散 NUMA(Non-Uniform Memory Access)はメモリアクセス時間に差が出る。
     メモリアドレスを共有しない構成は、メッセージ交換型(Message Passing System)、私有メモリ型(Private Memory)、 NORMA(NO Remote Memory Access)、分散メモリ(Distributed Memory)型等。
     近年主流の MIMD 型かつ共有メモリ型の採用は、ハードウェアの実装効率や性能向上よりもソフトウェアの実装が容易な構成に寄せてると。なるほどなー、それだけソフトウェア実装も大変なんやろう。
+- date: 2025-02-21
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 149 ~ 156
+  notes: |
+    第 9 章 マルチプロセッサ。
+    自動並列化コンパイラは研究されているが、現状では開発者がソフトウェアを並列・並行化しなければマルチプロセッサを活かせない。
+    並列化は OpenMP, MPI, oneTBB 等のライブラリ、並行化は pthread(native thread),  goroutine(M:N mapping), Erlang のプロセス(これは何分類？)等。
+    各 CPU で動くソフトウェアを「協調」させるために、
+    mutex, semaphore, バリア同期、条件変数、 event, signal 等の「タイミング調整(同期)」、
+    mailbox, channel, 共有変数等の「データ送受信」のを利用する必要がある。
+    プロセッサ的には同期もデータ送受信で実現している。
+    共有メモリ型・メッセージ交換型で仕組みが異なり、後者はつまるところ CPU 同士の I/O であり、使い勝手が良い前者の共有メモリを利用する方法が現代では一般的。
+    ただし協調のための仕組みがキャッシュコヒーレンス、メモリ順序付け、不可分操作に関係する性能劣化を引き起こす。
+    ソフトウェア周りは概ね分かるがバリア同期、条件変数は何のことかわからなかったので宿題。地味に並列化もやったことない。
+    いずれにせよ共有メモリ型のプロセッサは代償を払ってるのねというのを知れた。
