--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -202,3 +202,12 @@
     ただし協調のための仕組みがキャッシュコヒーレンス、メモリ順序付け、不可分操作に関係する性能劣化を引き起こす。
     ソフトウェア周りは概ね分かるがバリア同期、条件変数は何のことかわからなかったので宿題。地味に並列化もやったことない。
     いずれにせよ共有メモリ型のプロセッサは代償を払ってるのねというのを知れた。
+- date: 2025-02-22
+  bookTitle: 世界の作りおき野菜 みんなに愛される味付けの魔法
+  pages: 1 ~ 71
+  notes: |
+    毎年初夏に辣韮を乳酸発酵で漬けるので、それまでに他に何を漬けようかと思ってパラパラと読んだ。
+    キャベツや白菜で作るザワークラウトもどきが手軽で定番だが、今とても高いので他の野菜で漬けたいのでアイデアを集めている。
+    からし菜・茄子、オクラ、あとイタリア風ピクルスのマッシュルームが気になる。お値段次第で。
+    でも生食できるくらい新鮮なマッシュルームてその辺のスーパーで手に入るのかな。
+    このままだと無難な玉ねぎになりそうなのでなんかチャレンジしたいな。
