--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -211,3 +211,13 @@
     からし菜・茄子、オクラ、あとイタリア風ピクルスのマッシュルームが気になる。お値段次第で。
     でも生食できるくらい新鮮なマッシュルームてその辺のスーパーで手に入るのかな。
     このままだと無難な玉ねぎになりそうなのでなんかチャレンジしたいな。
+- date: 2025-02-23
+  bookTitle: 世界の作りおき野菜 みんなに愛される味付けの魔法
+  pages: 72 ~ 144
+  notes: |
+    後半は漬物を利用した料理のレシピか発酵飲料が主なのであくまで参考程度に。
+    ニシンはこれハーリングもどきなわけやがやってみたいけど生ニシンが手に入らないからな。
+    仮に別の魚で新鮮で冷凍で寄生虫対策してそっから漬け込むとなると試行錯誤のレベル高いな。
+    ジンジャービールはノンアルなら日本でも違法じゃないので作れるか。
+    ピクルス液のカクテルもちょっと気になるが、スコッチを飲むときにピックルバックはたまにやる乳酸発酵のやつだと塩分やばいので、なかなかな。
+    もう一冊くらい発酵関連の書籍を読んでイメージ高める必要がある感じした。
