--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -49,3 +49,7 @@
   bookTitle: 世界の作りおき野菜 みんなに愛される味付けの魔法
   bookAuthor: Freddie Janssen, 清水玲奈
   previouslyRead: true
+- id: pickles-a-global-history
+  bookTitle: ピクルスと漬物の歴史
+  bookAuthor: Jan Davison, 甲斐理恵子
+  previouslyRead: true
