--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -221,3 +221,13 @@
     ジンジャービールはノンアルなら日本でも違法じゃないので作れるか。
     ピクルス液のカクテルもちょっと気になるが、スコッチを飲むときにピックルバックはたまにやる乳酸発酵のやつだと塩分やばいので、なかなかな。
     もう一冊くらい発酵関連の書籍を読んでイメージ高める必要がある感じした。
+- date: 2025-02-24
+  bookTitle: ピクルスと漬物の歴史
+  pages: 1 ~ 47
+  notes: |
+    気候に合わせた塩漬け、酢漬けの使い分けの歴史。アジアの醗酵の歴史。
+    ロマンはあるが酢漬けは好かんので今回も発酵塩漬けかな。
+    夏の発酵が激しい頃には塩漬けと酢漬けの中間のやつを作っても面白いかもなと思った。
+    セロリの浅漬を見て思い出したが、セロリのピクルスは美味い。
+    今も比較的安いし。けど産膜酵母が湧くので味が落ちがちなのよな。他の野菜は高い。
+    ただキムチの頁を見て、複数の野菜を混ぜて漬けるのもアリかなと思えてきた。安く買える野菜を組み合わせるてはどうか。
