--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -231,3 +231,13 @@
     セロリの浅漬を見て思い出したが、セロリのピクルスは美味い。
     今も比較的安いし。けど産膜酵母が湧くので味が落ちがちなのよな。他の野菜は高い。
     ただキムチの頁を見て、複数の野菜を混ぜて漬けるのもアリかなと思えてきた。安く買える野菜を組み合わせるてはどうか。
+- date: 2025-02-25
+  bookTitle: ピクルスと漬物の歴史
+  pages: 48 ~ 72
+  notes: |
+    古代エジプトでは煮詰めた海水に鳥を漬けて生食していた。
+    トールシという漬物は現代でも見られる素材で作られていた。
+    ニンジン・キュウリ・カリフラワー・タマネギ・ピーマン・トウガラシ・オリーブ・カブ。
+    モロッコの塩レモン。ギリシア・ローマの魚醤。ブドウ果汁につけるモスタルダ・ディ・フルッタ。
+    オリーブのオレウロペインが醗酵を阻害する。オスマン帝国のトールシ。漬け汁の清涼飲料水。
+    トールシは参考になった気がする。食感が楽しい野菜にしようか。
