--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -241,3 +241,12 @@
     モロッコの塩レモン。ギリシア・ローマの魚醤。ブドウ果汁につけるモスタルダ・ディ・フルッタ。
     オリーブのオレウロペインが醗酵を阻害する。オスマン帝国のトールシ。漬け汁の清涼飲料水。
     トールシは参考になった気がする。食感が楽しい野菜にしようか。
+- date: 2025-02-25
+  bookTitle: ピクルスと漬物の歴史
+  pages: 73 ~ 92
+  notes: |
+    古代メソポタミア・ペルシアからヨーロッパ・北アフリカを経由して北アメリカへ漬物が伝わった。
+    ここでもカブが人気。中東は酸味の効いた酢漬けを好む。肉を漬けるのはエジプトでも見られたが虫は中東の特徴的な点か。
+    チミチュリは浅漬けなのか...浅漬けもいいよな。
+    ただ仕込むアイデアがほしいのは塩野付汁で醗酵させるやつなのでまたの機会。
+    トールシのように複数種類漬け込むのが良さそう。スパイスやハーブを入れるかは置いといたとしてて。
