--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -250,3 +250,14 @@
     チミチュリは浅漬けなのか...浅漬けもいいよな。
     ただ仕込むアイデアがほしいのは塩野付汁で醗酵させるやつなのでまたの機会。
     トールシのように複数種類漬け込むのが良さそう。スパイスやハーブを入れるかは置いといたとしてて。
+- date: 2025-02-27
+  bookTitle: ピクルスと漬物の歴史
+  pages: 93 ~ 110
+  notes: |
+    ニシンの漬物、ザウアークラウト、ディル・ピクルス。西欧を代表する漬物。
+    オランダの発展をもたらしたニシンの塩漬けがシュールストレミングにつながる。ザウアークラウトとキュウリは近代ヨーロッパの基本食。
+    高濃度のタンニンを含む素材を一緒につけることでキュウリの歯ごたえを維持できる。
+    ザウアークラウトは酢等酸味のある漬け汁を塩水・ふり塩に置き換えることで生まれた。
+    ザウアークラウトは簡単なのでキャベツさえ安ければ毎年作るが、今年は厳しいか。
+    日本のキュウリは長いので切って使うことになる。
+    各国のザウアークラウトでキャベツ以外の野菜も一緒に漬け込む物があるのでその辺参考にする。
