--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -261,3 +261,12 @@
     ザウアークラウトは簡単なのでキャベツさえ安ければ毎年作るが、今年は厳しいか。
     日本のキュウリは長いので切って使うことになる。
     各国のザウアークラウトでキャベツ以外の野菜も一緒に漬け込む物があるのでその辺参考にする。
+- date: 2025-02-28
+  bookTitle: ピクルスと漬物の歴史
+  pages: 111 ~ 126
+  notes: |
+    北アメリカの移民は漬物で食材を保存した。スペイン人がアメリカにキュウリを持ち込み原住民も栽培をした。
+    ユダヤ系移民がザウアークラウト・ニシン・コーシャ・ディル・ピクルスを持ち込み漬物の伝統を勢いづけた。
+    家庭にはメイソンジャーの登場、金属の蓋と手早い殺菌方法の発見により瓶詰め漬物の大量生産が進み、そしてハインツにつながる(!!)
+    低温殺菌や冷蔵保存の技術でアメリカの漬物は大きく変化し、ブレッド・アンド・バターと呼ばれる甘いピクルスもアメリカで生まれた。
+    北アメリカの漬け物史みてると無償にきゅうりを漬けたくなった。
