--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -7,3 +7,16 @@
     アチャールで特徴的なのはごま油やマスタードオイルで漬ける点。火の代わりに強烈な太陽光で細菌やカビを殺し腐敗を防ぐ。
     チャツネもインドから大西洋を渡った。
     油で漬けるのはちょっと容器的な意味でハードル高いが覚えておく。
+- date: 2025-03-02
+  bookTitle: ピクルスと漬物の歴史
+  pages: 134 ~ 147
+  notes: |
+    イギリス人は漬物の象徴のような存在だった。
+    家庭菜園から保存の必要で始まり、インドとの交易で風変わりな漬物に発展。ゆで卵の酢漬けもこの頃文献に現れる。
+    ただ色鮮やかな漬物への愛が銅の添加による緑青中毒にまでつながる。肉・鳥・魚の漬物も積極的に行われた。
+    イギリスとチャツネとの出会い、レシピ考案者のメジャー・グレイの名は今も残る。
+    そしてウスターソース。タマリンド・アンチョビを樽熟成することで生まれた。
+    しかしケチャップははじめきのこの漬物から染み出す茶色い漬け汁キャチャップだった。
+    トマトの可能性に気づきトマトケチャップを生んだのはイギリスからの流行を受けたアメリカだった。
+    アメリカのピクルスで名を馳せたハインツもトマトケチャップ製造に参入。他にはアメリカ・ルイジアナではタバスコが生まれた。
+    歴史としては面白くもっと探求したいが、喫緊の漬物テーマにはちょっとソースの話題過ぎて沿わないかなｗ
