--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -20,3 +20,14 @@
     トマトの可能性に気づきトマトケチャップを生んだのはイギリスからの流行を受けたアメリカだった。
     アメリカのピクルスで名を馳せたハインツもトマトケチャップ製造に参入。他にはアメリカ・ルイジアナではタバスコが生まれた。
     歴史としては面白くもっと探求したいが、喫緊の漬物テーマにはちょっとソースの話題過ぎて沿わないかなｗ
+- date: 2025-03-03
+  bookTitle: ピクルスと漬物の歴史
+  pages: 158 ~ 169
+  notes: |
+    現代の漬物は非醗酵と古き良き醗酵の二手に分かれている。特にアメリカは非醗酵の漬物が市場を占める。
+    健康への利点・自然食品の流行で自然醗酵の漬物も再評価されている。
+    ピクルス液の飲料やアイスキャンディー、ピックルバックといった新しい使い方も現れた。
+    しかし漬物の食べ過ぎが癌のリスクを高めるという報告もある。また塩分過多も問題。
+    漬物の、傷みやすい食材を長期保存可能にする自然技術という側面は、食糧問題でも注目されている。
+    これで本編は終わり。最後はまとめに入ってきたから漬物アイデアには特になかったが流れは興味深かった。
+    醗酵リバイバルの話もあるし、減り続ける「家庭の漬物」を細々と続けるのもいいもんや。
