--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -31,3 +31,11 @@
     漬物の、傷みやすい食材を長期保存可能にする自然技術という側面は、食糧問題でも注目されている。
     これで本編は終わり。最後はまとめに入ってきたから漬物アイデアには特になかったが流れは興味深かった。
     醗酵リバイバルの話もあるし、減り続ける「家庭の漬物」を細々と続けるのもいいもんや。
+- date: 2025-03-04
+  bookTitle: ピクルスと漬物の歴史
+  pages: 170 ~ 192
+  notes: |
+    訳者あとがきにある通り、何か漬けたくなる気持ちは増幅した。読む前から漬けるアイデア探してたのもあって。
+    とりあえず今回は茄子・ピーマン・キュウリ・セロリあたりの組み合わせで漬けてみる。ニンニクモ添えて。
+    キムチやトールシを見て複数の野菜を混ぜたくなった。ただし味付けは純粋に塩と前の漬け汁。鷹の爪くらいはいれるか？
+    あと近い内に塩レモンはいつか漬けてみたい。ノーワックスのレモンを仕入れるしかないよな。
