--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -39,3 +39,15 @@
     とりあえず今回は茄子・ピーマン・キュウリ・セロリあたりの組み合わせで漬けてみる。ニンニクモ添えて。
     キムチやトールシを見て複数の野菜を混ぜたくなった。ただし味付けは純粋に塩と前の漬け汁。鷹の爪くらいはいれるか？
     あと近い内に塩レモンはいつか漬けてみたい。ノーワックスのレモンを仕入れるしかないよな。
+- date: 2025-03-05
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 157 ~ 169
+  notes: |
+    第 10 章 キャッシュコヒーレンス。
+    共有メモリ型のマルチプロセッサシステムで個々の CPU が持つキャッシュに書き込んだ値を適切に他の CPU に伝える仕組みがキャッシュコヒーレンス制御。 coherence とは「最新の値が読み出されること」。
+    ハードウェア的に解決する方法としては CPU の状態を除き見する snoop 方式と共通のテーブルで管理する directory 方式がある。プロセッサ数が多いと後者が用いられる傾向があるが 1 回あたりの処理性能は前者が優る。
+    スヌープ方式には書き込み時に他のキャッシュを無効化する write invalidate と他のキャッシュにも書き込む write update があり、前者が主流。
+    write invalidate の主流プロトコル MSI では無効化されたキャッシュの次に他の CPU のキャッシュを取得するため CPU 間の通信が発生する。
+    キャッシュが無効化されることで他の CPU で必ずキャッシュミスを起こす。これを coherence miss という。
+    また false sharing と呼ばれる、異なる CPU が同じキャッシュラインを使うことで本来は関係ない箇所でキャッシュミスが発生する問題もある。
+    false sharing やばいな...こんなん padding で回避とか？限界がある気がするけど。
