--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -51,3 +51,12 @@
     キャッシュが無効化されることで他の CPU で必ずキャッシュミスを起こす。これを coherence miss という。
     また false sharing と呼ばれる、異なる CPU が同じキャッシュラインを使うことで本来は関係ない箇所でキャッシュミスが発生する問題もある。
     false sharing やばいな...こんなん padding で回避とか？限界がある気がするけど。
+- date: 2025-03-06
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 170 ~ 176
+  notes: |
+    第 10 章 キャッシュコヒーレンス。
+    ソフトウェア的には汎用的な対策は難しい。
+    送受信の頻度を下げる、キャッシュライン配置の工夫、 write combine, write gather といったハードウェア的な支援、 NUMA 構成のような CPU のグループ内の通信コストが低くなるような構成がある。
+    コヒーレンスミスの実験では POSIX thread 間で同一のキャッシュラインに書き込み false sharing を再現。実行する CPU が 1 つの方が速くなる。
+    低レベルまで降りないと中々実感で来ないけど恐ろしい話や。
