--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -60,3 +60,15 @@
     送受信の頻度を下げる、キャッシュライン配置の工夫、 write combine, write gather といったハードウェア的な支援、 NUMA 構成のような CPU のグループ内の通信コストが低くなるような構成がある。
     コヒーレンスミスの実験では POSIX thread 間で同一のキャッシュラインに書き込み false sharing を再現。実行する CPU が 1 つの方が速くなる。
     低レベルまで降りないと中々実感で来ないけど恐ろしい話や。
+- date: 2025-03-07
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 177 ~ 181
+  notes: |
+    第 11 章 メモリ順序付け。
+    共有メモリ型のマルチプロセッサに於いて、主にメモリアクセスの高速化のために 1 つの CPU から見たメモリアクセスの順序が入れ替わることがある。
+    この対象となるのは一般的には異なるアドレスへの複数のメモリアクセスのみ。同一のアドレスの場合はデータ依存関係を壊す可能性があるため。
+    メモリアクセス順序の入れ替えを許可する・しない状況は CPU 各社によって違う。 x86 は控えめで Arm RISC-V は積極的。
+    メモリアクセスが 1 つの CPU からどう見える化を memory consistency と呼び、いくつかのモデルが定式化されている。
+    x86 は Total Store Ordering 、 Arm や RISC-V は release consistency 、他にも sequential consistency 、 weak ordering 等がある。
+    実際のところ、各 CPU のメモリアクセス仕様は定式化されたモデルよりも複雑。
+    GCC の最適化で命令の並び替えがあったと思うが、アレの CPU 実行時レベルでのやつかな？
