--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -72,3 +72,14 @@
     x86 は Total Store Ordering 、 Arm や RISC-V は release consistency 、他にも sequential consistency 、 weak ordering 等がある。
     実際のところ、各 CPU のメモリアクセス仕様は定式化されたモデルよりも複雑。
     GCC の最適化で命令の並び替えがあったと思うが、アレの CPU 実行時レベルでのやつかな？
+- date: 2025-03-08
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 181 ~ 187
+  notes: |
+    第 11 章 メモリ順序付け。
+    メモリアクセス順序が変わるメカニズム。
+    バンク構成≒メモリアクセスを同時処理する領域で待ちが発生したとき。
+    ストアバッファ(store buffer, store queue, write buffer)の先行処理の滞留。
+    先行する処理でキャッシュミス、後続する処理でキャッシュがあるようなとき。
+    複数の CPU の組み合わせで異なるメモリアクセス順序になると偶発的なソフトウェアの不具合の原因になる。
+    この不具合となり得る状態は非同期なプログラムでもよくあるから感覚はつかめるよな。
