--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -83,3 +83,13 @@
     先行する処理でキャッシュミス、後続する処理でキャッシュがあるようなとき。
     複数の CPU の組み合わせで異なるメモリアクセス順序になると偶発的なソフトウェアの不具合の原因になる。
     この不具合となり得る状態は非同期なプログラムでもよくあるから感覚はつかめるよな。
+- date: 2025-03-09
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 188 ~ 194
+  notes: |
+    第 11 章 メモリ順序付け。
+    メモリ順序付け命令で memory ordering instruction (memory barrier instruction, memory fence instruction とも) で必要な箇所でメモリアクセスの順序を強制する
+    双方向(ロードのみ、ストアのみ、全て)・単方向の種類がある。 x86 には単方向がない。
+    単方向では acquire release があり、これにより保護したい区間の順序を保持しつつ、区間外からの入れ替えを許容してある程度性能劣化を抑制できる利点がある。
+    ただし順序の強制によって入れ替えが抑制され、命令実行の機会を失うことになる。
+    はじめの方で学んだ高速化のツケが回ってきてるなという感じがしなくもないが高速化しないと意味ないしなあ。難し。
