--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -93,3 +93,14 @@
     単方向では acquire release があり、これにより保護したい区間の順序を保持しつつ、区間外からの入れ替えを許容してある程度性能劣化を抑制できる利点がある。
     ただし順序の強制によって入れ替えが抑制され、命令実行の機会を失うことになる。
     はじめの方で学んだ高速化のツケが回ってきてるなという感じがしなくもないが高速化しないと意味ないしなあ。難し。
+- date: 2025-03-10
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 195 ~ 202
+  notes: |
+    第 11 章 メモリ順序付け。
+    性能対策が必要な場合はまずソフトウェア的に正しく動作する前提で、 CPU 命令レベルで対処せず、メモリ順序付けを隠蔽するチャネルなどのソフトウェア機構で対処すべき。
+    その上で、データ送受信の頻度を下げ CPU 間の送受信を減らす、影響範囲を狭める適切な CPU 命令の選択する。
+    また x86 はメモリ順序の入れ替えに慎重なため、ソフトウェアを ARM や RISC-V にポーティングする際には注意が必要。
+    最後にメモリ順序入れ替わりの再現。
+    Linux Kernel のメモリ順序付けのドキュメントにハードウェア設計者宛の助言(苦言)が書いてるらしいので後で読も。
+    いわゆる高級言語を使ってると下位 layer に投げっぱなしで触れることないが知れてよかった。
