--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -104,3 +104,15 @@
     最後にメモリ順序入れ替わりの再現。
     Linux Kernel のメモリ順序付けのドキュメントにハードウェア設計者宛の助言(苦言)が書いてるらしいので後で読も。
     いわゆる高級言語を使ってると下位 layer に投げっぱなしで触れることないが知れてよかった。
+- date: 2025-03-11
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 203 ~ 221
+  notes: |
+    第 12 章 不可分操作。
+    共有メモリ型のマルチプロセッサでは同一アドレスに対する Read Modify Write で競合が発生、
+    カウンタのインクリメントや状態の書き換え等でデータの不整合を引き起こす。
+    この競合を避けるために不可分操作、アトミック操作(atomic operation)で複数のメモリ操作を 1 つの操作として扱う。
+    不可分操作により、バリア同期(barrier synchronization)、排他制御(mutual exclusion)といった CPU のタイミング調整が可能になる。
+    かつての CPU はバスロック方式で実現していたが、現在はキャッシュコヒーレンスプロトコルにより実現されている。
+    不可分命令には、交換(swap)・比較付き交換(compare and swap)・演算()・LL/SC(load linked/store conditional) がある。
+    このへんは低いレイヤにおける非同期なプログラムの問題そのものという印象。
