--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -116,3 +116,14 @@
     かつての CPU はバスロック方式で実現していたが、現在はキャッシュコヒーレンスプロトコルにより実現されている。
     不可分命令には、交換(swap)・比較付き交換(compare and swap)・演算()・LL/SC(load linked/store conditional) がある。
     このへんは低いレイヤにおける非同期なプログラムの問題そのものという印象。
+- date: 2025-03-12
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 221 ~ 230
+  notes: |
+    第 12 章 不可分操作。
+    不可分操作は共有メモリの同一アドレスへのアクセスを逐次化する為遅い。
+    また不可分制御はメモリ書き込みを伴うためラインインバリデートが行われ、次の同一アドレスへの不可分制御でコヒーレンスミスが発生し遅くなる。
+    さらに不可分制御の多くは占有権などメモリの順序関係が重要なため、メモリ順序付けを伴った命令を提供しており、これも遅い。
+    必要な機構なのでソフトウェア的な緩和策は難しいが、不可分操作の頻度を下げる、協調アルゴリズムの選択(Test and test-and-set 、統計カウンタ、 Read Copy Update)、
+    適切な不可分命令の利用(といった手段を取れるが、ただしCPU 挙動まで考慮した汎用的対応は非常に難しい。
+    あとは不可分操作の再現実験。この本の性能劣化の分類としては最後の章なので全部盛りみたいな END GAME 感あった。
