--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -125,5 +125,16 @@
     また不可分制御はメモリ書き込みを伴うためラインインバリデートが行われ、次の同一アドレスへの不可分制御でコヒーレンスミスが発生し遅くなる。
     さらに不可分制御の多くは占有権などメモリの順序関係が重要なため、メモリ順序付けを伴った命令を提供しており、これも遅い。
     必要な機構なのでソフトウェア的な緩和策は難しいが、不可分操作の頻度を下げる、協調アルゴリズムの選択(Test and test-and-set 、統計カウンタ、 Read Copy Update)、
-    適切な不可分命令の利用(といった手段を取れるが、ただしCPU 挙動まで考慮した汎用的対応は非常に難しい。
+    適切な不可分命令の利用(といった手段を取れるが、ただし CPU 挙動まで考慮した汎用的対応は非常に難しい。
     あとは不可分操作の再現実験。この本の性能劣化の分類としては最後の章なので全部盛りみたいな END GAME 感あった。
+- date: 2025-03-13
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 231 ~ 236
+  notes: |
+    第 13 章 高速なソフトウェアを書く際には何に注目すべきか。
+    ソフトウェア開発において CPU の性能劣化に関して、その発生頻度、損失サイクル、と要因を制御できるかを基準に、著者の主観で分類している。
+    発生頻度の高い真のデータ依存関係・分岐命令の予測ミス・キャッシュミスは注目すべきだが、ソフトウェアによって I/O やシステムコールの頻度も重要になる。
+    プログラミング言語によっては VM を介すものなど低レイヤの制御が難しいが、キャッシュミスに対してはデータ構造の設計次第で改善できる可能性がある。
+    最後に著者の主観での優先順位付けで終わる。
+    この章の取れる手段はソフトウェア開発で並列処理や最適なアルゴリズム・メモリ構造を選択していればある程度カバーできそう。ただ真のデータ依存関係は低レイヤまで見えるようにならないと難しそう。
+    あと付録 B 以外読んだら終わり。
