--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -138,3 +138,11 @@
     最後に著者の主観での優先順位付けで終わる。
     この章の取れる手段はソフトウェア開発で並列処理や最適なアルゴリズム・メモリ構造を選択していればある程度カバーできそう。ただ真のデータ依存関係は低レイヤまで見えるようにならないと難しそう。
     あと付録 B 以外読んだら終わり。
+- date: 2025-03-13
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 237 ~ 246
+  notes: |
+    付録 A CPU についてさらに広く深く知るには。
+    書籍・論文・特許・ オープンソースハードウェア・講義資料・特定の CPU の資料などを利用できる。
+    書籍でいうと、パタヘネが入門、ヘネパタが中級。オープンソースソフトウェアだと RISC-V 。
+    ヘネパタは積んだまま読めてないけどアレで中級か...とりあえずこの本で多少ハードル下がった気はする。
