--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -146,3 +146,12 @@
     書籍・論文・特許・ オープンソースハードウェア・講義資料・特定の CPU の資料などを利用できる。
     書籍でいうと、パタヘネが入門、ヘネパタが中級。オープンソースソフトウェアだと RISC-V 。
     ヘネパタは積んだまま読めてないけどアレで中級か...とりあえずこの本で多少ハードル下がった気はする。
+- date: 2025-03-14
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 257 ~ 262
+  notes: |
+    付録 C 現代的な CPU の実装例(BOOM)。
+    現代的な CPU 実装例として RISC-V 実装の BOOM(Berkley Out-of-Order Machine)。
+    最新版 BOOMv3 は MIPS 社 R10000 や DEC 社 Alpha 21264 の影響を受けてる。
+    命令デコードが 4 、命令実行が 8(浮動小数点 2 、整数 4 、メモリアクセス 2) の並列度を持ち、アウトオブオーダー実行した結果をライトバックステージで並べ直す。
+    ハードウェア記述言語を使わず Scala の Chisel で記述されているらしいので読んでみるのも良さそう。
