--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -155,3 +155,14 @@
     最新版 BOOMv3 は MIPS 社 R10000 や DEC 社 Alpha 21264 の影響を受けてる。
     命令デコードが 4 、命令実行が 8(浮動小数点 2 、整数 4 、メモリアクセス 2) の並列度を持ち、アウトオブオーダー実行した結果をライトバックステージで並べ直す。
     ハードウェア記述言語を使わず Scala の Chisel で記述されているらしいので読んでみるのも良さそう。
+- date: 2025-03-16
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 263 ~ 268
+  notes: |
+    付録 D マイクロオペレーション方式とその命令レイテンシ。
+    CISC 系のように一つの命令をハードウェアの都合の良いように複数の命令ステージに分割するものをマイクロオペレーション方式という。
+    分割した各々の命令を都合の良いタイミングで実行することを個別発行制御という。
+    命令が分割されることで、パイプラインの資源不足やデータ依存関係によりレイテンシの揺れがある。
+    そもそも分割された命令は真のデータ依存関係を有するため、レイテンシが短くなることはない。
+    こういった複雑な命令体系に対して、 RISC 系ではシンプルな命令体系を採用していると。
+    人間の把握しやすいレベルにシンプル化しないと高速化もままならんということかな。
