--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -166,3 +166,13 @@
     そもそも分割された命令は真のデータ依存関係を有するため、レイテンシが短くなることはない。
     こういった複雑な命令体系に対して、 RISC 系ではシンプルな命令体系を採用していると。
     人間の把握しやすいレベルにシンプル化しないと高速化もままならんということかな。
+- date: 2025-03-17
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 269 ~ 273
+  notes: |
+    付録 E GPU およびベクトル方式におけるパイプラインの高密度化の工夫。
+    GPU とスパコンのベクトル方式では SIMD 型の命令を採用している。いずれも真のデータ依存関係による機会損失は避けられない。
+    GPU では空いた機会を細粒度マルチスレッド(Fine-Grained MultiThreading)で埋めることで高速化している。
+    ベクトル方式では空いた機会を同一ベクトル内の他の要素で埋めることで高速化している。
+    ループアンローリング最適化で必要な多数のレジスタをベクトルの要素数を増やすことで克服したとも考えることができる。
+    GPU は CPU より更によく知らんので勉強になるわ。
