--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -176,3 +176,13 @@
     ベクトル方式では空いた機会を同一ベクトル内の他の要素で埋めることで高速化している。
     ループアンローリング最適化で必要な多数のレジスタをベクトルの要素数を増やすことで克服したとも考えることができる。
     GPU は CPU より更によく知らんので勉強になるわ。
+- date: 2025-03-18
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 274 ~ 280
+  notes: |
+    付録 F CPU の性能向上の物理的な難しさ。
+    1 つのステージは flip-flop で囲まれた論理ゲートで作り込まれるが、 CPU の動作周期から定まるクロックサイクル内に収まるよう、利用できる論理ゲートの数に制限がある。
+    また製造品質のばらつきや実行環境の変化に対応させるためにクロックサイクル丸ごとを論理ゲートに費やせない。
+    また論理ゲート自体にも制限がある。大きな論理ゲート、多くの論理ゲート、遠くの論理ゲートへの信号は遅くなる等。
+    論理ゲートより下位だと電子レベルの特性で遅くなるなど。
+    知らないことだらけだが物理的な影響がこう繋がってくるねんなという感想。
