--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -186,3 +186,11 @@
     また論理ゲート自体にも制限がある。大きな論理ゲート、多くの論理ゲート、遠くの論理ゲートへの信号は遅くなる等。
     論理ゲートより下位だと電子レベルの特性で遅くなるなど。
     知らないことだらけだが物理的な影響がこう繋がってくるねんなという感想。
+- date: 2025-03-19
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 281 ~ 300
+  notes: |
+    あとがき、参考文献、索引など。
+    情報処理技術者試験レベルしか把握してなかったから CPU に対する解像度が上がり、以前の何も知らなかった頃には戻れなくなった感じがする。
+    この流れでパタヘネ、ヘネパタも読めればよいが。
+    あとがきに出てくるラム社の本はいくつか読んだし改めて読み直すもよいか。
