--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -194,3 +194,12 @@
     情報処理技術者試験レベルしか把握してなかったから CPU に対する解像度が上がり、以前の何も知らなかった頃には戻れなくなった感じがする。
     この流れでパタヘネ、ヘネパタも読めればよいが。
     あとがきに出てくるラム社の本はいくつか読んだし改めて読み直すもよいか。
+- date: 2025-03-20
+  bookTitle: 魏武注孫子
+  pages: 202 ~ 204
+  notes: |
+    実に 2 ヶ月ぶりだが、やっと再開。
+    九地篇 第十一。
+    「率然」常山の蛇「率然」は攻撃に臨機応変に反撃してくる恐ろしい蛇で、軍もそのように臨機応変でなければならないとする。
+    そのためには九地の理法(重地に赴き死地とする)によって軍を一体にすること重要とする。
+    デスマのプロジェクトルームの一体感みたいなやつか。常用できるものではないから注意も必要か。
