--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -203,3 +203,12 @@
     「率然」常山の蛇「率然」は攻撃に臨機応変に反撃してくる恐ろしい蛇で、軍もそのように臨機応変でなければならないとする。
     そのためには九地の理法(重地に赴き死地とする)によって軍を一体にすること重要とする。
     デスマのプロジェクトルームの一体感みたいなやつか。常用できるものではないから注意も必要か。
+- date: 2025-03-21
+  bookTitle: 魏武注孫子
+  pages: 204 ~ 207
+  notes: |
+    九地篇 第十一。
+    「将軍の職務」兵を他国深く難しい戦いの地に進めるのが将の職務であり、そのために将は平生で軍事を兵に知らせず一心に進軍させる。
+    「九地の変」先に挙げた九地の戦い方が正でここでは変について説く。
+    散地で戦い、軽地では連携して行軍し、争地で敢えて敵より遅れ、交地で守備を固める。
+    衢地・重地・圮地・囲地・死地は正の戦い方とそれほど違いはないように見えたが、変だとすれば状況に応じて敵の意表をつくことが意識されているのかも読み取れないだけで。
