--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -212,3 +212,11 @@
     「九地の変」先に挙げた九地の戦い方が正でここでは変について説く。
     散地で戦い、軽地では連携して行軍し、争地で敢えて敵より遅れ、交地で守備を固める。
     衢地・重地・圮地・囲地・死地は正の戦い方とそれほど違いはないように見えたが、変だとすれば状況に応じて敵の意表をつくことが意識されているのかも読み取れないだけで。
+- date: 2025-03-22
+  bookTitle: 魏武注孫子
+  pages: 211 ~ 216
+  notes: |
+    九地篇 第十一。
+    「覇王の兵」軍争篇の地の利にも触れつつ、九地の利害を知った覇王の軍隊がいかに強力を説く。
+    「巧みに勝つ」自軍には予め軍の法令を施行し、利のみを示して亡地・死地に赴かせることで視力を尽くさせる。敵軍には自軍の虚を示すことで罠にはめる。
+    自軍に関する話は、現代的な大規模組織ならそうやなと。ただスタートアップのような小規模組織なら利害両方示しても良さそうな気がする。
