--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -220,3 +220,10 @@
     「覇王の兵」軍争篇の地の利にも触れつつ、九地の利害を知った覇王の軍隊がいかに強力を説く。
     「巧みに勝つ」自軍には予め軍の法令を施行し、利のみを示して亡地・死地に赴かせることで視力を尽くさせる。敵軍には自軍の虚を示すことで罠にはめる。
     自軍に関する話は、現代的な大規模組織ならそうやなと。ただスタートアップのような小規模組織なら利害両方示しても良さそうな気がする。
+- date: 2025-03-23
+  bookTitle: 魏武注孫子
+  pages: 216 ~ 218
+  notes: |
+    九地篇 第十一。
+    「始めは処女の如く、後には脱兎の如し」宣戦布告したときから敵国からの通行を禁じ廟堂で戦略を練る。始めは自軍を弱く見せ、敵が隙を見せれば迅速に攻撃し敵を制する。
+    兵は詭道であるという話の言い換えとのこと。
