--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -227,3 +227,12 @@
     九地篇 第十一。
     「始めは処女の如く、後には脱兎の如し」宣戦布告したときから敵国からの通行を禁じ廟堂で戦略を練る。始めは自軍を弱く見せ、敵が隙を見せれば迅速に攻撃し敵を制する。
     兵は詭道であるという話の言い換えとのこと。
+- date: 2025-03-24
+  bookTitle: 魏武注孫子
+  pages: 219 ~ 222
+  notes: |
+    火攻篇 第十二。
+    元は最後の篇だった可能性がある。
+    前半で火攻について説き、次に将への報酬を遅らせてはならない話、最後に戦争は確実な利や余程の危険が迫らない限り起こすべきではないとし、亡国・死者が生き返ることはないと始計篇の主張に繋げる。
+    「火攻の五種」火人・火積・火輜・火庫・火隊があり、時日を選ぶべきであると説く。曹操は兵陰陽の思想に近い非合理的な部分を無視して読んでいる。
+    同じ篇で火攻が効果的であることと戦争をすべきでないことを説くのはギャップがあるが散文集のようなものであるからそんなものなのかもな。
