--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -236,3 +236,12 @@
     前半で火攻について説き、次に将への報酬を遅らせてはならない話、最後に戦争は確実な利や余程の危険が迫らない限り起こすべきではないとし、亡国・死者が生き返ることはないと始計篇の主張に繋げる。
     「火攻の五種」火人・火積・火輜・火庫・火隊があり、時日を選ぶべきであると説く。曹操は兵陰陽の思想に近い非合理的な部分を無視して読んでいる。
     同じ篇で火攻が効果的であることと戦争をすべきでないことを説くのはギャップがあるが散文集のようなものであるからそんなものなのかもな。
+- date: 2025-03-25
+  bookTitle: 魏武注孫子
+  pages: 222 ~ 226
+  notes: |
+    火攻篇 第十二。
+    「火攻の変化」5 つの火攻の変化に応じて自軍も対応して戦う。
+    「火攻の効用」火攻は水攻めより効果的である。曹操は水攻めでは兵糧を奪えないとする。
+    実例として赤壁の戦いでの曹操軍の大敗を挙げる。
+    火から逃げるために兵糧を捨てるということね。
