--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -238,10 +238,10 @@
     同じ篇で火攻が効果的であることと戦争をすべきでないことを説くのはギャップがあるが散文集のようなものであるからそんなものなのかもな。
 - date: 2025-03-25
   bookTitle: 魏武注孫子
-  pages: 222 ~ 226
+  pages: 227 ~ 229
   notes: |
     火攻篇 第十二。
-    「火攻の変化」5 つの火攻の変化に応じて自軍も対応して戦う。
-    「火攻の効用」火攻は水攻めより効果的である。曹操は水攻めでは兵糧を奪えないとする。
-    実例として赤壁の戦いでの曹操軍の大敗を挙げる。
-    火から逃げるために兵糧を捨てるということね。
+    「費留」功績に見合った賞与を同じ月のうちに与えないことをいい、これがないように心がけるべきであるととく。
+    「戦争は慎重に」利があるか余程の危険が迫るかしない限り戦争を起こすべきではないとする。
+    始計篇の主張につなげていたことが、本来最終篇であったと考えられる所以。
+    ここでも感情でなく合理的に判断すべきであることが念押しされてて孫子らしい。
