--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -245,3 +245,13 @@
     「戦争は慎重に」利があるか余程の危険が迫るかしない限り戦争を起こすべきではないとする。
     始計篇の主張につなげていたことが、本来最終篇であったと考えられる所以。
     ここでも感情でなく合理的に判断すべきであることが念押しされてて孫子らしい。
+- date: 2025-03-27
+  bookTitle: 魏武注孫子
+  pages: 230 ~ 231
+  notes: |
+    用間篇 第十三。
+    敵に勝つために必要なのは「先知」であり、そのために祭祀や計算でなく間諜で以て敵情を知る。郷間・内間・反間・死間・生間がある。
+    反間を作り出し、得た情報から郷間・内間を用いて死間が作りだした虚偽を敵に知らせ、生間を予定通り帰還させ報告させる。
+    特に反間が重要。孫子では宰相ともなりうる上智の人物を反間とすることが重要。
+    そのため将は間と親しくし最も手厚く褒賞を与えるべきであり、間を用いるには将自身も聖知・仁義を持ち密やかである必要がある。
+    碌でもないやつには寝返らないしな。時代的にもこれが反間計につながるのかな。
