--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -264,3 +264,13 @@
     特に反間が重要。孫子では宰相ともなりうる上智の人物を反間とすることが重要。
     そのため将は間と親しくし最も手厚く褒賞を与えるべきであり、間を用いるには将自身も聖知・仁義を持ち密やかである必要がある。
     碌でもないやつには寝返らないしな。時代的にもこれが反間計につながるのかな。
+- date: 2025-03-28
+  bookTitle: 魏武注孫子
+  pages: 231 ~ 235
+  notes: |
+    用間篇 第十三。
+    「先知」多大な支出を伴う戦争において、支出を惜しみ敵情を知らないものは不仁であり。
+    敵情を知るには祭祀や類推は無駄でただ間諜によってのみ知れる
+    「五間」郷間・内間・反間・死間・生間がある。
+    孫子ではこれらの間諜が互いに連携し敵に知られず活動することを神紀といい非常に重要視する。
+    つまり「推測するな計測せよ」で憶測で判断するなと言うところか。
