--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -274,3 +274,12 @@
     「五間」郷間・内間・反間・死間・生間がある。
     孫子ではこれらの間諜が互いに連携し敵に知られず活動することを神紀といい非常に重要視する。
     つまり「推測するな計測せよ」で憶測で判断するなと言うところか。
+- date: 2025-03-29
+  bookTitle: 魏武注孫子
+  pages: 235 ~ 236
+  notes: |
+    用間篇 第十三。
+    「間の厚遇」将は間に最も親しくし褒章も手厚くしなければならない。
+    また将自身も間を用いるには聖知・仁義を持ち、密やかに行わねば得られない。
+    間諜で得る情報を重要視しているため手厚いわけだが、将への要求も高いのはなんでなやろな。
+    信頼のおける将でないと誰もついてこないってことか。
