--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -283,3 +283,10 @@
     また将自身も間を用いるには聖知・仁義を持ち、密やかに行わねば得られない。
     間諜で得る情報を重要視しているため手厚いわけだが、将への要求も高いのはなんでなやろな。
     信頼のおける将でないと誰もついてこないってことか。
+- date: 2025-03-30
+  bookTitle: 魏武注孫子
+  pages: 237 ~ 238
+  notes: |
+    用間篇 第十三。
+    「反間の重要性」反間を作り出すには敵の守将以下の姓名を知り自軍に潜入している間諜を探し出し利を与えて反間とする。
+    間諜を厚遇するのは寝返らせないためということな。でもその程度だと引き止め続けられない気もするので、先に挙げた聖知・仁義が必要なのか。
