--- a/contents/booklogs/2025/2025-03.yml
+++ b/contents/booklogs/2025/2025-03.yml
@@ -290,3 +290,14 @@
     用間篇 第十三。
     「反間の重要性」反間を作り出すには敵の守将以下の姓名を知り自軍に潜入している間諜を探し出し利を与えて反間とする。
     間諜を厚遇するのは寝返らせないためということな。でもその程度だと引き止め続けられない気もするので、先に挙げた聖知・仁義が必要なのか。
+- date: 2025-03-31
+  bookTitle: 魏武注孫子
+  pages: 239 ~ 241
+  notes: |
+    用間篇 第十三。
+    「上智の間」
+    殷は伊尹を夏に送り、周は呂尚を殷に送っていた。
+    これらの人物は一般的なスパイではないが、時刻の宰相ともなりうる人物を敵国に潜り込ませる、あるいは敵国から基準させ敵情を探るという意味で挙げられる。このことからも反間が重要視される。
+    実例として孟達が上智でなかったため反間を感づかれ滅ぼされた話。
+    敵情を探る方法が現代で一般的に言う間者よりも広いのかなと。
+    本編はこれで終わり。あと原文が載ってるが返り点がなくて読めないので飛ばす。次は解題から。
