--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -7,3 +7,12 @@
     その中で曹操が果たした役割が、現行の孫子の十三篇に定めたことと考えられる。
     これは、ある程度現行十三篇に近い形に近づいていた何種類かの孫子のテキストを照らし合わせ、曹操が正しいと考える本文にまとめたことを指し、それを校勘という。
     孫氏の学派によって綴られたのであれば、曹操もその学徒であったということか。歴史ロマンや。
+- date: 2025-04-02
+  bookTitle: 魏武注孫子
+  pages: 282 ~ 288
+  notes: |
+    解題 曹操の校勘。
+    曹操の校勘なくして現行の孫子はない。その理由として校勘がどのように行われたかを詳細に分析している。
+    時代の近い皇甫嵩のテキスト、より古い鉄雀山漢簡や後漢初期の馮異の列伝といった、少なくとも二系統の孫子を参照している。
+    自らが理解する孫子の本来の姿に近いよう本文を定め意味が通るよう注釈をつけた。
+    更に美文であるというあたりが詩人の曹操らしいところやな。
