--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -16,3 +16,12 @@
     時代の近い皇甫嵩のテキスト、より古い鉄雀山漢簡や後漢初期の馮異の列伝といった、少なくとも二系統の孫子を参照している。
     自らが理解する孫子の本来の姿に近いよう本文を定め意味が通るよう注釈をつけた。
     更に美文であるというあたりが詩人の曹操らしいところやな。
+- date: 2025-04-03
+  bookTitle: 魏武注孫子
+  pages: 288 ~ 291
+  notes: |
+    解題 『魏武注孫子』の特徴。
+    孫子の軍事思想における原則、詭道・戦わずして勝つ・合理性に対して曹操は黄老思想との関連性を見出し、また訓詁学の原則に則り、本文に寄り添った注をつけている。
+    しかし一部では黄老思想に基づいた理解ができるにも関わらず、自身の実践経験に基づき本文と異なった注をつけているところもあり、それは魏晋期から始まる訓詁学の流れの先駆と言える。
+    あくまで本文の思想に寄り添い、実例による具体化を行わず哲学的に論じたことが、『孫子』が『魏武注孫子』で読まれ続けた理由といえる。
+    孫子の思想をシントピカル読書でまとめたわけやなこれは。すごすぎ。
